[package]
name = "rimrua"
version = "0.1.0"
edition = "2021"
description = "Border intrusion detection pipeline using satellite imagery"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Arrays & math
ndarray = "0.16"
num-complex = "0.4"
rustfft = "6.2"

# Image processing
image = "0.25"
tiff = "0.9"

# Geospatial
geojson = "0.24"
geo = "0.28"

# ML inference
ort = "2.0.0-rc.9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async + HTTP
tokio = { version = "1", features = ["full"] }
axum = "0.7"

# Parallelism
rayon = "1.10"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "2"
anyhow = "1"

# DateTime
chrono = { version = "0.4", features = ["serde"] }
